[tool.poetry]
name = "changeloggh"
version = "1.0.10"
description = "changeloggh is a command line tool that generates changelog files for github"
authors = ["Saúl Piña <sauljabin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sauljabin/changeloggh"
repository = "https://github.com/sauljabin/changeloggh"
keywords = ["changelog", "changeloggh"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
rich = "^13"
jinja2 = "^3"
semver = "^3"

[tool.poetry.dev-dependencies]
ruff = "*"
black = "*"
coverage = {extras = ["toml"], version = "*"}
toml = "*"
pre-commit = "*"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.coverage.run]
source = ["changeloggh"]
branch = true
omit = ["*tests/*", "*scripts/*", "*__init__.py", "changeloggh/__main__.py"]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
changeloggh = "changeloggh.cli:main"
clgh = "changeloggh.cli:main"